--- a/BA_project_0911_1643.qmd
+++ b/BA_project_0911_1643.qmd
@@ -169,24 +169,30 @@ df_final <- df_final %>%
     For the purposes of our analysis, we assume these name-gender associations are accurate (e.g., "James" is classified as male). Given that only 101 out of 1,792 records are marked as unisex or have missing gender values, we decided to exclude these records when examining gender's impact on other variables.
 
 ```{r}
+library(DT) 
 # Open the dataset with the names associated with a gender
 df_name <- read.csv("https://query.data.world/s/vosjabgwxpybit5vkwjkyv7przl6km?dws=00000", header=TRUE, stringsAsFactors=FALSE)
-df_name[df_name$name == "James",]
 
+
+# Rename column for consistency
 df_name <- df_name %>% 
-  rename( Gender = gender)
+  rename(Gender = gender)
 
-# Separate the column 'director' into 'Name' and 'Last_Name' at the first space
+# Separate the column 'Director' in df_final into 'Name' and 'Last_Name' at the first space
 df_final <- df_final %>%
   separate(Director, into = c("Name", "Last_Name"), sep = " ", extra = "merge", fill = "right")
 
-#merge the two dataset and match the name of the director to a gender  
-df_final_gender <- left_join(df_final, df_name, by = c("Name" = "name"))
-df_final_gender <- df_final_gender %>%
-  select(-score)
+# Merge the datasets on the 'Name' column to match the director's name to a gender
+df_final_gender <- df_final %>%
+  left_join(df_name, by = c("Name" = "name")) %>%
+  select(-score)  # Remove unnecessary column
 
-print(df_final_gender)
-
+# Crear la tabla interactiva
+datatable(df_final_gender, 
+          options = list(pageLength = 10,  # Número de filas que se muestran por página
+                         autoWidth = TRUE, # Ajuste automático del ancho de las columnas
+                         searchHighlight = TRUE), # Resaltar texto de búsqueda
+          filter = 'top')  # Agrega un filtro de búsqueda en la parte superior de la tabla
 
 ```
 
@@ -227,8 +233,9 @@ df_final[c ("Gender","Genre", "Language", "Country_of_Origin", "Bechdel_test_res
 df_final$Imdb_Votes <- as.numeric(gsub(",", "", df_final$Imdb_Votes))
 df_final[c("Revenue", "Imdb_Rating", "Imdb_Votes")] <- lapply(df_final[c("Revenue", "Imdb_Rating", "Imdb_Votes")], as.numeric)
 
-# The types of variables our dataset has
-str(df_final)
+# Display a table with variable names and data types only
+variable_info <- data.frame(Variable = names(df_final), Type = sapply(df_final, class))
+print(variable_info)
 
 ```
 
@@ -240,6 +247,71 @@ na_counts <- colSums(is.na(df_final)) ## 32 NA in Revenue and 342 in Gender
 df_final <- na.omit(df_final)
 
 ```
+
+9.  **Variables and Descriptions after the cleaning**
+
+```{=html}
+<!-- -->
+```
+1.  **Year (Release Date)**\
+    • **Description**: The year when the film was released to the public.\
+    • **Type**: Integer.
+
+2.  **Bechdel Test Result (Passed/Failed)**\
+    • **Description**: This variable indicates whether the film passed or failed the Bechdel test, a measure of gender representation in films.\
+    • **Type**: Categorical/factor with possible values "Passed" or "Failed."
+
+3.  **Budget (in \$)**\
+    • **Description**: The production budget of the film in U.S. dollars, adjusted for inflation to reflect 2013 dollar values.\
+    • **Type**: Numeric, stored as an integer.
+
+4.  **Revenue (in \$)**\
+    • **Description**: The total revenue or box office earnings of the film in U.S. dollars, adjusted for inflation to 2013 prices.\
+    • **Type**: Numeric.
+
+5.  **Language**\
+    • **Description**: The primary language(s) in which the film was released or broadcast, represented by specific languages such as "English" or "French."\
+    • **Type**: Categorical/factor.
+
+6.  **Movie Title**\
+    • **Description**: The name of the film, provided as text.\
+    • **Type**: Text (Character).
+
+7.  **Country of Origin**\
+    • **Description**: The country where the film was produced or primarily distributed, provided as the country’s name (e.g., "USA", "France").\
+    • **Type**: Categorical/factor.
+
+8.  **IMDb Ratings**\
+    • **Description**: The film’s IMDb rating, often based on user reviews and ratings on the IMDb platform.\
+    • **Type**: Numeric.
+
+9.  **Genre (Action, Drama, Comedy, etc.)**\
+    • **Description**: The primary genre(s) describing the film, such as Action, Drama, or Comedy.\
+    • **Type**: Categorical/factor.
+
+10. **IMDb Votes**\
+    • **Description**: The number of user reviews for the film’s IMDb rating on the IMDb platform.\
+    • **Type**: Numeric.
+
+11. **Wins**\
+    • **Description**: The number of awards the film has won (e.g., "Golden Globe", "Oscar").\
+    • **Type**: Numeric.
+
+12. **Nominations**\
+    • **Description**: The number of nominations for awards the film has received.\
+    • **Type**: Numeric.
+
+13. **Gender (Director’s Gender)**\
+    • **Description**: The gender of the film's director.\
+    • **Type**: Categorical/factor.
+
+14. **Director Name**\
+    • **Description**: The name of the director of the film.\
+    • **Type**: Text (Character).
+
+15. **Bechdel Binary**\
+    • **Description**: This variable indicates whether the film passed (1) or failed (0) the Bechdel test.\
+    • **Type**: Categorical/factor with possible values "Passed = 1" or "Failed = 0."
 
 ## Exploratory Data Analysis
 
@@ -317,70 +389,74 @@ numerical_summary <- summary(df_unique[, c("Budget", "Revenue", "Imdb_Rating", "
 numerical_summary_df <- as.data.frame(numerical_summary)
 
 # Convert the numerical summary data to an interactive table using DT
-numerical_summary_table <- datatable(numerical_summary_df, options = list(pageLength = 5))
+numerical_summary_table <- datatable(numerical_summary_df, options = list(pageLength = 6))
 
 # Print the interactive table
 numerical_summary_table
 ```
 
-### Correlation Heatmap: Revenue, Budget, Imdb_Rating, Wins, Nominations
+### Correlation Heatmap: Revenue, Budget, Imdb_Rating, Wins, Nominations, Bechdel_binary
 
-In this step, we present a correlation heatmap that displays the relationships between key variables: **Revenue**, **Budget**, **IMDb Rating**, **Wins**, and **Nominations**. By examining the correlation coefficients between these variables, this heatmap provides insights into the degree and direction of association among financial, critical, and award-related metrics. Positive correlations indicate that as one variable increases, the other tends to increase as well, while negative correlations suggest an inverse relationship. This visualization serves as a preliminary analysis, helping us identify which factors are most closely linked, and providing a basis for further exploration of the economic and critical impacts of female representation in films.
+In this step, we present a correlation heatmap that displays the relationships between key variables: **Revenue**, **Budget**, **IMDb Rating**, **Wins**, **Bechdel_binary** and **Nominations**. By examining the correlation coefficients between these variables, this heatmap provides insights into the degree and direction of association among financial, critical, and award-related metrics. Positive correlations indicate that as one variable increases, the other tends to increase as well, while negative correlations suggest an inverse relationship. This visualization serves as a preliminary analysis, helping us identify which factors are most closely linked, and providing a basis for further exploration of the economic and critical impacts of female representation in films.
 
 ```{r}
 
-library(plotly)
+# Select relevant columns including Bechdel_binary (which has values 0 and 1)
+num_cols <- df_unique %>% 
+  select(Revenue, Budget, Imdb_Rating, Wins, Nominations, Bechdel_binary)  %>%
+  mutate(across(everything(), as.numeric))
 
-# Calculate correlation matrix
-num_cols <- df_final %>% 
-  select(Revenue, Budget, Imdb_Rating, Wins, Nominations)
+# Calculate the correlation matrix with complete observations only
 corr_matrix <- cor(num_cols, use = "complete.obs")
 
-# Convert correlation matrix to long format using tidyr
+# Convert correlation matrix to long format for ggplot
 corr_long <- corr_matrix %>%
   as.data.frame() %>%
-  mutate(Var1 = rownames(.)) %>%
-  pivot_longer(cols = -Var1,
-              names_to = "Var2",
-              values_to = "value")
+  rownames_to_column(var = "Var1") %>%
+  pivot_longer(cols = -Var1, names_to = "Var2", values_to = "value")
 
-# Create the interactive heatmap with correlation values on the tiles
+# Create the heatmap with correlation values displayed on the tiles
 heatmap <- ggplot(corr_long, aes(x = Var1, y = Var2, fill = value)) +
   geom_tile(color = "white") +
-  scale_fill_gradient2(low = "blue", high = "red", mid = "white", 
-                      midpoint = 0, limit = c(-1,1)) +
-  geom_text(aes(label = round(value, 2)), color = "black", size = 4) + # Add correlation values on tiles
-  labs(title = "Correlation Heatmap: Revenue, Budget, Imdb_Rating, Wins, Nominations", x = "", y = "",
-       fill = "Correlation") +
+  scale_fill_gradient2(low = "blue", high = "red", mid = "white", midpoint = 0, limit = c(-1, 1)) +
+  geom_text(aes(label = round(value, 2)), color = "black", size = 4) +  # Display correlation values
+  labs(title = "Correlation Heatmap: Revenue, Budget, Imdb_Rating, Wins, Nominations, Bechdel Test", 
+       x = "", y = "", fill = "Correlation") +
   theme_minimal() +
   theme(
     plot.title = element_text(hjust = 0.5),  # Center the title
     axis.text.x = element_text(angle = 45, hjust = 1)
   )
 
-# Make the heatmap interactive using plotly
+# Make the heatmap interactive with Plotly
 ggplotly(heatmap)
 ```
 
 ### Interpretation:
 
--   **High Positive Correlations:**
+#### **High Positive Correlations:**
 
-    -   **Budget and Revenue (0.62):** This indicates a strong positive correlation, meaning higher budgets are generally associated with higher revenue.
+1.  **Budget and Revenue (0.60)**: There is a strong positive correlation between budget and revenue. This suggests that films with higher production budgets tend to generate higher box office revenues. Higher budgets typically allow for better marketing, production, and star power, contributing to greater commercial success.
 
-    -   **Wins and Nominations (0.77):** This strong positive correlation shows that movies with more nominations tend to win more awards.
+2.  **Wins and Nominations (0.79)**: A very strong positive correlation, indicating that films with more nominations generally win more awards. This highlights the likelihood that films nominated for prestigious awards are often the ones that take home the honors.
 
--   **Moderate Correlations:**
+#### **Moderate Correlations:**
 
-    -   **Budget and Wins (0.49):** Movies with larger budgets tend to have more wins, though the correlation is not very strong.
+1.  **IMDb Rating and Nominations (0.48)**: There is a moderate positive correlation between IMDb ratings and nominations. Films with better ratings from audiences tend to receive more nominations, suggesting that critical success often paves the way for recognition in award circles.
 
-    -   **IMDb Rating and Nominations (0.48):** Higher IMDb ratings tend to correspond with more nominations, suggesting critical acclaim can influence recognition.
+#### **Weak or No Correlations:**
 
--   **Weak or No Correlations:**
+1.  **Budget and IMDb Rating (-0.04)**: There is virtually no correlation between the budget of a film and its IMDb rating, indicating that the amount spent on production does not necessarily correlate with higher user ratings. Audience ratings are influenced by various other factors, such as the story, acting, and direction.
 
-    -   **Budget and IMDb Rating (-0.04):** Budget has almost no correlation with IMDb ratings, indicating that higher spending doesn't necessarily lead to better viewer ratings.
+2.  **Wins and IMDb Rating (0.06)**: The correlation between wins and IMDb ratings is very weak, suggesting that winning awards does not strongly impact the audience's ratings. A film can be successful in terms of awards but may not necessarily receive high ratings from the audience.
 
-    -   **Wins and IMDb Rating (0.06):** Wins also show a very weak correlation with IMDb ratings, suggesting award success and viewer ratings are largely independent.
+3.  **Bechdel Binary (0.00 to -0.15 with other variables)**: The Bechdel binary variable (indicating whether a film passed or failed the Bechdel test) shows very weak correlations with other variables, suggesting that passing the Bechdel test does not have a significant relationship with budget, revenue, IMDb rating, or wins. For example:
+
+    -   **Bechdel_binary and Revenue (-0.10)**: A very weak negative correlation, meaning that whether a film passes the Bechdel test has almost no influence on its revenue.
+
+    -   **Bechdel_binary and Budget (-0.15)**: A weak negative correlation, showing that films passing the Bechdel test are slightly less likely to have larger budgets, though the relationship is not strong.
+
+    -   **Bechdel_binary and IMDb Rating (-0.13)**: A slightly negative correlation, indicating a small negative relationship between passing the Bechdel test and IMDb ratings. However, the correlation is weak.
 
 ### Revenue Distribution by Bechdel Test Outcome
 
@@ -388,7 +464,6 @@ In this step, we examine the distribution of movie revenues based on whether fil
 
 ```{r}
 
-library(plotly)
 
 # Check for any missing or NA values in the Revenue column to ensure data integrity
 df_unique <- df_unique %>% drop_na(Revenue)
@@ -404,7 +479,7 @@ plot <- ggplot(df_unique, aes(x = factor(Bechdel_binary), y = log(Revenue), fill
     subtitle = "Log of Revenue",
     x = "Bechdel Test Result",
     y = "Revenue (Log Scale)",
-    fill = "Test Result"
+    fill = "Bechdel Test Result\n(0 = Fail, 1 = Pass)"
   ) +
   theme_minimal() +
   theme(
@@ -430,8 +505,6 @@ Overall, this suggests that films failing the Bechdel Test may achieve higher re
 In this section we use a boxplot that compares film revenues across different genres, with results segmented by whether the films pass or fail the Bechdel Test.
 
 ```{r}
-
-library(plotly)
 
 # interactive plot
 plot <- ggplot(df_final, aes(x = Genre, y = Revenue, fill = factor(Bechdel_binary))) +
@@ -480,7 +553,7 @@ p <- ggplot(df_unique, aes(x = Imdb_Rating, y = Revenue, color = factor(Bechdel_
   scale_y_log10() + 
   scale_color_manual(values = c("0" = "#FF7F50", "1" = "#4CAF50")) +  # Set colors for Bechdel_binary
   labs(title = "Revenue vs. IMDb Rating by Bechdel Test Result",
-       x = "IMDb Rating", y = "Log of Revenue", color = "Bechdel Test (0 = Fail, 1 = Pass)") +
+       x = "IMDb Rating", y = "Log of Revenue", color = "Bechdel Test Result\n(0 = Fail, 1 = Pass)") +
   theme_minimal()
 
 ggplotly(p)
@@ -489,7 +562,7 @@ ggplotly(p)
 
 Passing the Bechdel Test does not appear to have a major impact on revenue, as both passing and failing movies follow similar trends in terms of IMDb Rating and Revenue. Instead, IMDb rating itself seems to be the stronger indicator of revenue potential across both groups, though this effect is relatively modest
 
-### Wins by Bechdel Test Result
+### Wins by Bechdel Test Result 
 
 ```{r}
 
@@ -521,7 +594,7 @@ plot <- ggplot(df_unique, aes(x = Bechdel_binary, y = Wins, fill = Bechdel_binar
   labs(title = "Awards by Bechdel Test Result",
        x = "Bechdel Test Result", 
        y = "Number of Awards",
-       fill = "Bechdel Test (0 = Fail, 1 = Pass)") +
+       fill = "Bechdel Test Result\n(0 = Fail, 1 = Pass)") +
   scale_fill_manual(values = c("0" = "#FF7F50", "1" = "#4CAF50")) +
   theme_minimal() +
   theme(plot.title = element_text(hjust = 0.5)) +
@@ -550,7 +623,7 @@ library(plotly)
 plot <- ggplot(df_unique, aes(x = factor(Bechdel_binary), y = Imdb_Rating, fill = factor(Bechdel_binary))) +
   geom_boxplot(outlier.shape = NA) +
   labs(title = "IMDb Ratings by Bechdel Test Result",
-       x = "Bechdel Test Result (0 = Fail, 1 = Pass)", y = "IMDb Rating") +
+       x = "Bechdel Test Result", y = "IMDb Rating",  fill = "Bechdel Test Result\n(0 = Fail, 1 = Pass)") +
   scale_fill_manual(values = c("0" = "#FF7F50", "1" = "#4CAF50")) +
   theme_minimal() + 
   theme(plot.title = element_text(hjust = 0.5))
